// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe renders a city widget 1`] = `
<div>
  <iframe
    src="https://widget.getyourguide.com/default/city.frame?widget=city&iata=SYD&locale_code=en-US"
    style={
      Object {
        "height": "100%",
        "marginBottom": "1.5em",
      }
    }
    title="GetYourGuide city widget"
  />
</div>
`;

exports[`Iframe renders correctly with no props 1`] = `
<div>
  <iframe
    src="https://widget.getyourguide.com/default/activities.frame?widget=activities&currency=USD&locale_code=en-US&number_of_items=3"
    style={
      Object {
        "height": "100%",
        "marginBottom": "1.5em",
      }
    }
    title="GetYourGuide activities widget"
  />
</div>
`;
